Fixed displaying statistics component on mobile devices

--- a/src/Heroes/Hero/Statistic/Statistic.css
+++ b/src/Heroes/Hero/Statistic/Statistic.css
@@ -1,6 +1,5 @@
 .hero .value {
 	margin-left: -20px;
-	margin-top: -8px;
 }
 
 .hero .label {
@@ -17,4 +16,24 @@
 
 .hero .rv-hint p {
 	margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
+	.hero .value {
+		margin-top: -8px;
+	}
+}
+
+@media screen and (max-width: 768px){
+	.ui.statistic {
+		display: block;
+	}
+
+	.rv-xy-plot {
+		margin: 0 auto;
+	}
+
+	.ui.items>.item>.content>.description {
+		margin-top: 3em;
+	}
 }
